auto play resolved

--- a/src/App.css
+++ b/src/App.css
@@ -11,4 +11,9 @@
   /* background: rgba(85, 85, 85, 0.5); */
   letter-spacing: 3px;
   overflow: hidden;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select:none;
+  user-select:none;
+  -o-user-select:none;
 }
